Fixed config file

--- a/backend/scrapping/config.json
+++ b/backend/scrapping/config.json
@@ -1,4 +1,4 @@
 {
   "SUPABASE_URL": "DEFINE_YOUR_SUPABASE_URL",
-  "SUPABASE_KEY": "DEFINE_YOUR_SUPABASE_KEY",
+  "SUPABASE_KEY": "DEFINE_YOUR_SUPABASE_KEY"
 }
