--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@tabler/icons-react": "^3.22.0",
     "next": "15.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
